[package]
name = "rendezvous-dht"
version = "0.1.0"
authors = ["vsawant@vrrb.io"]
readme = "README.md"
repository = "https://github.com/vrrb.io/rendezvous-dht"
description = """
A simple implementation of the Rendezvous DHT.
"""
keywords = ["dht","rendezvous"]
include = ["src/**/*", "Cargo.toml"]
edition = "2021"


[dependencies]
bincode = "1.3.3"
log = "0.4"
rand = "0.8.5"
serde = "1.0"
serde_derive = "1.0"
sha3 = "0.7"
simplelog = "0.5"
time = "0.1"
clap = {version="4.0.32",features=["derive"]}
hex="*"
hbbft = { git = "https://github.com/vrrb-io/hbbft", branch = "master" }
threshold_crypto = "0.4.0"
thiserror = "1.0.38"
laminar = "0.5.0"
dashmap = "5.4.0"
lru_time_cache = "0.11.11"
crossbeam-channel = "0.5.6"
cuckoofilter = {version="0.5.0", features = ["serde_support"]}
serde_json = "1.0.96"
tracing = "0.1.36"

[dev-dependencies]
num-bigint = "0.1"
